fix regression in other books which wrapped exercises
even if they did not have labels (the label attribute was set but it
was empty which denotes suppressing the label)

--- a/rulesets/common/_modify.scss
+++ b/rulesets/common/_modify.scss
@@ -183,7 +183,7 @@
 @mixin modify_listMakeLabelVisible() {
   ol,
   ul {
-    &[data-label] {
+    &[data-label]:not([data-label=""]) {
       // &::outside {
       //   set-tag-name: div;
       //   set-attrs: data-type list-wrapper;
@@ -213,7 +213,7 @@
 /// This moves the data-label attribute off of an exercise and into a new element so it is visible
 @mixin modify_exerciseMakeLabelVisible() {
   [data-type="exercise"] {
-    &[data-label] {
+    &[data-label]:not([data-label=""]) {
       // &::outside {
       //   set-tag-name: div;
       //   set-attrs: data-type list-wrapper;
